--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                         <a href="#home" class="navbar-brand">
 
-                            <img src="img/logo/apple-logo-1024x728.png" alt="logo" width="30px">
+                            <img src="img/logo/MSDn.svg" alt="logo" width="30px">
                         </a>
                     </div>
                     <div class="collapse navbar-collapse" id="msd-menu">
