Adapting to the Responsive Theme

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <!--style CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <!--responsive CSS-->
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -46,7 +48,7 @@
 
                         <a href="#home" class="navbar-brand">
 
-                            <img src="img/logo/MSDn.svg" alt="logo" width="30px">
+                            <img src="img/logo/MSDn.svg" alt="logo">
                         </a>
                     </div>
                     <div class="collapse navbar-collapse" id="msd-menu">
@@ -84,7 +86,7 @@
                         <h3> MAPA Slovakia digital <br>váš dodávateľ digitálnych máp</h3>
                     </div>
                     <div id="home-btn" class="animated zoomIn">
-                        <a class="btn btn-lg btn-general btn-white smooth-scroll" href="#work" role="button" title="View Our Work">Naše práce</a>
+                        <a class="btn btn-lg btn-general btn-green smooth-scroll" href="#work" role="button" title="View Our Work">Naše práce</a>
                     </div>
 
                 </div>
@@ -106,7 +108,7 @@
             <div class="container">
                 <div class="row wow animated fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-desktop fa-3x"></i>
@@ -119,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-laptop fa-3x"></i>
@@ -132,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-map fa-3x"></i>
@@ -145,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-street-view fa-3x"></i>
@@ -158,7 +160,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-code fa-3x"></i>
@@ -171,7 +173,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-paper-plane fa-3x"></i>
@@ -223,7 +225,11 @@
                                     <div class="content-title-underline"></div>
                                 </div>
                                 <div id="about-desc" class="title wow animated fadeInDown" data-wow-duration=".8s" data-wow-delay=".5s">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quos quae modi placeat fugit, libero eaque aspernatur ipsam fuga beatae cum explicabo dolorum odio sunt asperiores voluptatem accusantium culpa quisquam.</p>
+                                    <p>MAPA Slovakia Digital, s.r.o. vznikla odčlenením divízie digitálnych dát a GIS od firmy MAPA Slovakia Plus. Nadväzujeme na činnosť firmy MAPA Slovakia, ktorá už pred 15 rokmi začala na Slovensku ako jedna z prvých firiem s tvorbou digitálnych máp a digitálnej kartografie. <br><br>
+
+                                    V súčasnosti sme sa vypracovali na významného operátora digitálnych geodát, ktorý je schopný poskytnúť zákazníkovi komplexnú ponuku <strong>digitálnych máp</strong> a databáz Slovenska aj celej Európy. Na Slovensku sme firma, ktorá v tomto odbore vytvára a udržiava najrozsiahlejšie mapové dielo mimo štátneho mapového diela. Niektoré produkty, ako napr. databázu adresných bodov, sme na trh priniesli ako prví, pričom dodnes je to unikátna databáza adries v celej SR. <br><br>
+
+                                    Vytvárame a udržiavame vlastné podrobné vektorové mapy SR. Máme vybavenie na ich tvorbu a aktualizáciu vrátane technológie na ich kartografickú reprezentáciu a tvorbu produktov pre <strong>GIS</strong> a <strong>iné aplikácie</strong>.</p>
                                 </div>
 
                                 <div id="about-btn" class="title wow animated fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
@@ -263,56 +269,56 @@
 
                 <div class="row no-gutters wow animated fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eligendi magni nulla itaque delectus, nesciunt voluptatem dignissimos atque, consequuntur saepe. Eius et incidunt ea, debitis natus fugit obcaecati at facilis.">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Desc">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="work">
@@ -438,7 +444,7 @@
                                     <div class="testimonial-author">
                                         <p>
                                             <strong>Tomáš Štefanič</strong>
-                                            <span>Sales</span>
+                                            <span>Sales - Hrdlička s.r.o.</span>
                                         </p>
                                     </div>
                                 </div>
@@ -599,28 +605,28 @@
 
                     <div class="row text-center wow animated bounceInLeft" data-wow-duration=".8s" data-wow-delay=".5s">
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-map-marker fa-5x"></i>
                                 <h2><span class="counter">530</span><span>+</span></h2>
                                 <p>Obcí používa aplikáciu <a href="#">mOBEC</a></p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-crosshairs fa-5x"></i>
                                 <h2><span class="counter">75</span><span>+</span></h2>
                                 <p>Digitálnych cintorínov <a href="#">mOBEC</a></p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-car fa-5x"></i>
                                 <h2><span class="counter">872</span><span>+</span></h2>
                                 <p>km pasportizovaných ciest <a href="#">mOBEC</a></p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-users fa-5x"></i>
                                 <h2><span class="counter">730000</span><span>+</span></h2>
@@ -742,7 +748,7 @@
                             <p>MAPA Slovakia Digital, 2018</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 hidden-sm hidden-xs">
                         <div id="footer-menu">
                             <ul>
                                 <li><a class="smooth-scroll" href="#home">Domov</a>/</li>
@@ -759,6 +765,8 @@
                 </div>
             </div>
         </div>
+
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-green btn-back-to-top smooth-scroll" title="home" role="button"><i class="fa fa-angle-up"></i></a>
 
     </footer>
 
