update media queries for extra small devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
     <header>
-        <nav class="navbar navbar-fixed-top" role="navigation">
+        <nav class="navbar msd-navbar-top navbar-fixed-top" role="navigation">
 
             <div class="container-fluid">
 
@@ -656,7 +656,7 @@
                     <div class="col-md-12">
                         <div id="clients-list" class="owl-carousel owl-theme">
                             <div class="client">
-                                <img src="img/logo/logo-1.png" class="img-responsive" alt="client">
+                                <img src="img/logo/.png" class="img-responsive" alt="client">
                             </div>
                             <div class="client">
                                 <img src="img/client/logos/logo-2.jpg" class="img-responsive" alt="client">
