--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <!--    meta tags-->
     <meta charset="utf-8">
+    <meta name="description" content="Building modern gis application, databases, digital maps, mobile mapping">
+    <meta name="keywords" content="GIS, Application, geospatial databases, web development, digital maps, mobile mapping">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--title-->
@@ -83,7 +85,7 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading" class="animated zoomIn">
-                        <h3> MAPA Slovakia digital <br>váš dodávateľ digitálnych máp</h3>
+                        <h3>MAPA Slovakia digital<br>váš dodávateľ digitálnych máp</h3>
                     </div>
                     <div id="home-btn" class="animated zoomIn">
                         <a class="btn btn-lg btn-general btn-green smooth-scroll" href="#work" role="button" title="View Our Work">Naše práce</a>
@@ -101,7 +103,7 @@
 
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-duration=".8s" data-wow-delay=".5s">
-                <h3>Services</h3>
+                <h3>Služby</h3>
                 <div class="content-title-underline"></div>
             </div>
 
@@ -234,7 +236,7 @@
 
                                 <div id="about-btn" class="title wow animated fadeInUp" data-wow-duration=".8s" data-wow-delay=".5s">
 
-                                    <a class="btn btn-lg btn-general btn-green smooth-scroll" href="#work" role="button">Naše práce</a>
+                                    <a class="btn btn-lg btn-general btn-green smooth-scroll" href="#work" role="button" title="View Work">Naše práce</a>
 
                                 </div>
 
@@ -498,7 +500,7 @@
                     <div class="col-md-4 wow animated zoomIn" data-wow-duration=".8s" data-wow-delay=".5s">
                         <div class="pricing-box text-center">
                             <h4 class="pricing-title">Pasport miestnych komunikácií</h4>
-                            <h3 class="pricing-value">od 1000 <sup>€</sup></h3>
+                            <h3 class="pricing-value">od 1000<sup>€</sup></h3>
                             <ul class="pricing-spec">
                                 <li>
                                     <p>Pasport MK mobilným mapovaním</p>
@@ -528,7 +530,7 @@
                     <div class="col-md-4 wow animated zoomIn" data-wow-duration=".8s" data-wow-delay=".5s">
                         <div class="pricing-box pricing-box-lg text-center">
                             <h4 class="pricing-title">Mapový portál</h4>
-                            <h3 class="pricing-value">od 400 <sup>€</sup></h3>
+                            <h3 class="pricing-value">od 400<sup>€</sup></h3>
                             <ul class="pricing-spec">
                                 <li>
                                     <p>Intuitívna webová mapová aplikácia</p>
@@ -561,7 +563,7 @@
                     <div class="col-md-4 wow animated zoomIn" data-wow-duration=".8s" data-wow-delay=".5s">
                         <div class="pricing-box text-center">
                             <h4 class="pricing-title">Pasport cintorínov</h4>
-                            <h3 class="pricing-value">od 1,80/HM <sup>€</sup></h3>
+                            <h3 class="pricing-value">od 1,80/HM<sup>€</sup></h3>
                             <ul class="pricing-spec">
                                 <li>
                                     <p>Pasport HM</p>
